--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,4 @@
-black==23.3.0
-click==8.1.3
-exceptiongroup==1.1.1
-iniconfig==2.0.0
-mypy-extensions==1.0.0
+pandas==2.0.2
 numpy==1.24.3
-packaging==23.1
-pandas==2.0.1
-pathspec==0.11.1
-platformdirs==3.5.1
-pluggy==1.0.0
-pytest==7.3.1
-python-dateutil==2.8.2
-pytz==2023.3
 scipy==1.10.1
-six==1.16.0
-tomli==2.0.1
-typing_extensions==4.5.0
-tzdata==2023.3
+pbr==5.11.1
