update setup file

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ description_file = README.md
 long_description_content_type = text/markdown
 summary = pyAKI allows calculation of Acute Kidney Injury from urine output and creatinine based on KDIGO criteria.
 author = 'Jan Ernsting, Christian Porschen'
-author_email = 'j.ernsting@uni-muenster.de, '
+author_email = 'j.ernsting@uni-muenster.de, christian.porschen@ukmuenster.de'
 url = https://github.com/AI2MS/pyAKI
 project_urls=
     Source Code = https://github.com/AI2MS/pyAKI
