chore: Add metadata version and package version, update author list

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,12 @@
 [metadata]
+metadata-version = 1.0
 name = pyAKI
 description_file = README.md
+version = 0.0.1
 long_description_content_type = text/markdown
 summary = pyAKI allows calculation of Acute Kidney Injury from urine output and creatinine based on KDIGO criteria.
-author = 'Jan Ernsting, Christian Porschen'
-author_email = 'j.ernsting@uni-muenster.de, christian.porschen@ukmuenster.de'
+author = 'Jan Ernsting, Christian Porschen, Paul Brauckmann'
+author_email = j.ernsting@uni-muenster.de, christian.porschen@ukmuenster.de
 url = https://github.com/AI2MS/pyAKI
 project_urls=
     Source Code = https://github.com/AI2MS/pyAKI
