--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,4 @@ repos:
     rev: v1.8.0
     hooks:
       - id: mypy
-        additional_dependencies:
-          - pandera[mypy]
-          - types-PyYAML
+        exclude: "^tests/.*"
