--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 strict_optional = true
+exclude = ["^tests/.*", ]
 
 [tool.pytest.ini_options]
 python_files = ["test_*.py", "*_test.py"]
