--- a/.github/workflows/python_cd.yml
+++ b/.github/workflows/python_cd.yml
@@ -1,12 +1,10 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Continuous Integration (Python)
+name: Continuous Delivery (Python)
 on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main, develop ]
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -39,14 +37,9 @@ jobs:
         pip install poetry
         poetry install --with dev
 
-    - name: Lint with ruff
-      run: poetry run ruff check .
-    - name: Check types with mypy
-      run: poetry run mypy .
-    - name: Test with pytest
-      run: poetry run pytest .
-
-    - name: Coveralls
-      run: poetry run coveralls
+    - name: Build and publish Package
+      run: |
+        poetry version ${{ github.ref_name }}
+        poetry publish --skip-existing --build
       env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
