--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -50,4 +50,4 @@ jobs:
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: poetry run coveralls
+      run: poetry run coveralls --service=github-actions
