--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -49,5 +49,4 @@ jobs:
     - name: Coveralls
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: poetry run coveralls --service=github-actions
+      run: poetry run coveralls
