--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -48,5 +48,6 @@ jobs:
 
     - name: Coveralls
       env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-      run: poetry run coveralls
+        # COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+      uses: coverallsapp/github-action@v2.3.4
