--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12"]  # Add more Python versions to test here
+        python-version: ["3.12", "3.13"]  # Add more Python versions to test here
 
     steps:
     - uses: actions/checkout@v4
@@ -48,6 +48,5 @@ jobs:
 
     - name: Coveralls
       env:
-        # COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
       uses: coverallsapp/github-action@v2.3.4
