--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ Changelog = "https://github.com/AI2MS/pyAKI/releases"
 Bugtracker = "https://github.com/AI2MS/pyAKI/issues"
 
 [tool.poetry.dependencies]
-python = "~3.12"
+python = "^3.12"
 pandas = "^2.2.3"
 pandas-stubs = "^2.2.3.241126"
 scipy = "^1.15.0"
