--- a/.github/workflows/python_cd.yml
+++ b/.github/workflows/python_cd.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-        poetry install --with dev
+        poetry install
 
     - name: Build and publish Package
       run: |
