--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,18 @@ pytest-recording = "^0.13.1"
 pytest-random-order = "^1.1.1"
 jupyterlab = "^4.3.4"
 
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.6.1"
+mkdocs-material = "^9.5.50"
+pymdown-extensions = "^10.14.1"
+mkdocstrings-python = "^1.13.0"
+mkdocs-jupyter = "^0.25.1"
+jupyter = "^1.1.1"
+mkdocs-macros-plugin = "^1.3.7"
+mkdocs-gen-files = "^0.5.0"
+mkdocs-literate-nav = "^0.6.1"
+mkdocs-section-index = "^0.3.9"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
