--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -37,7 +37,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-        poetry install --with dev
+        poetry install --with dev,docs
 
     - name: Lint with ruff
       run: poetry run ruff check .
@@ -50,3 +50,6 @@ jobs:
       env:
         github-token: ${{ secrets.GITHUB_TOKEN }}
       uses: coverallsapp/github-action@v2.3.4
+
+    - name: Build
+      run: poetry run mkdocs build
