--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - Package Overview: 'getting_started/overview.md'
   - Installation: 'getting_started/installation.md'
   - Basic Usage: 'getting_started/basic_usage.md'
+  - Contributing: 'getting_started/contributing.md'
   - Citing: 'getting_started/citing.md'
 - User Guide:
   - Tutorial: 'guide/tutorial.md'
