--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,8 @@ nav:
   - Probes: 'guide/probes.md'
   - Preprocessing: 'guide/preprocessing.md'
 - API Reference: reference/
-extra_css: []
+extra_css:
+- css/code_select.css
 theme:
   name: material
   repo_url: 'https://github.com/aidh-ms/pyAKI'
@@ -31,6 +32,8 @@ markdown_extensions:
 - attr_list
 - pymdownx.highlight:
     linenums: true
+    use_pygments: true
+    pygments_lang_class: true
 - pymdownx.superfences
 - pymdownx.extra
 - footnotes
